<resources>
    <string name="app_name">Projeto Android</string>
    <string name="login">Login</string>
    <string name="resultRegister">Result Register</string>
    <string name="resultLogin">Result Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="cpf">CPF</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="enter">Enter</string>
    <string name="txtName">Seu nome é: </string>
    <string name="txtSenha">Sua senha é: </string>
    <string name="txtCpf">Seu CPF é: </string>
    <string name="txtLogin">Seu login é: </string>
    <string name="ok">OK</string>
    <string name="campos">Preencha todos os campos</string>
    <string name="sucesso">Cadastrado com sucesso!</string>
    <string name="titlePage">ToDo</string>
    <string name="validation_empty">Preencha o campo</string>
    <string name="txtTodo">New ToDo</string>
    <string name="txtTodoupdate">Update ToDo</string>
    <string name="addTodo">Add</string>
    <string name="bemVindo">Bem Vindo(a)</string>
    <string name="btnDelete">delete</string>
    <string name="delete">Deseja deletar o item?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="no_user">Usuário não encontrado</string>
    <string name="no_pass">Senha incorreta</string>
    <string name="cadastrado">Usuário já cadastrado</string>
    <string name="admin_page">Admin Page</string>
    <string name="users">Usuários</string>
    <string name="delete_user">Deseja deletar o usuário?</string>
    <string name="update_user">Update User</string>
    <string name="update">Usuário atualizado</string>
    <string name="delete_list">Usuário deletado</string>
    <string name="distracao">Distracao</string>
    <string name="maps">Mapas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="invalid_email">Email inválido</string>
    <string name="incomplet_email_field">Email incompleto</string>
    <string name="prompt">Selecione o dia</string>
    <string name="distracao_title">Distracao</string>
    <string name="map_title">Mapa</string>
    <string name="title_activity_maps2">Map</string>

</resources>
