<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/colorBackRegister"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"/>

        <EditText
            android:id="@+id/cpf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/cpf"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom|end">

        <Button
            android:id="@+id/cancelRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/button"
            android:backgroundTint="#A9D5D0D0" />

        <Button
            android:id="@+id/enterRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:background="@drawable/button"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#B78D8888" />

    </LinearLayout>
</LinearLayout>